# SharkEngine

./: .gitignore  .gitmodules  CMakeLists.txt  DEPENDENCIES.md  LICENSE.md  README.md  dependencies.txt  todo.txt
src/: Assets.hpp  CLogger.hpp  Component.h  CoreDefine.h  GameObject.h  GlobalPreferences.hpp  HadmarineEngine.hpp  Mathf.h  Message.h  Object.h  ResourcesManager.h  Scene.h  SceneManager.h  SharkEngine.hpp  SharkMath.h  Transfrom.h  VulkanEngine.hpp  global_prefences.hpp  global_preferences.hpp  main.cpp  stdafx.hpp
src/InGame/GameObjects/: FloorObject.cpp  FloorObject.hpp  TestObject.cpp  TestObject.h
src/InGame/GameObjects/Buttons/: ButtonObj.cpp  ButtonObj.h
src/InGame/GameObjects/Player/: Player.cpp  Player.h
src/InGame/GameObjects/TEst/: TestObject.cpp  TestUIObject.cpp  TestUIObject.h
src/InGame/Scenes/: TestScene.cpp  TestScene.h
src/InGame/Scenes/GameScene/: GameScene.cpp  GameScene.h
src/InGame/Scenes/StartScene/: StartScene.cpp  StartScene.h
src/InGame/Scenes/Test/: TestScene.cpp  TestScene.h
src/InGame/Scripts/: FloorComponent.cpp  FloorComponent.hpp  TestComponent.cpp  TestComponent.h  TestComponent.h~
src/InGame/Scripts/Player/: PlayerMovement.cpp  PlayerMovement.h
src/InGame/Scripts/Test/: TestComponent.cpp  TestComponent.h
src/core/Engine/: Component.cpp  GameObject.cpp  Message.cpp  Scene.cpp  Transfrom.cpp
src/core/Engine/Components/: Transfrom.cpp
src/core/Engine/Manager/: ComponentManager.cpp  EntityIDManager.cpp  ResourcesManager.cpp  SceneManager.cpp
src/core/Engine/Mathf/: Mathf.cpp
src/core/Engine/Scene/: CoreStructs.cpp  Scene.cpp
src/core/Engine/Scene/Components/: BoxCollider.cpp  Button.cpp  CameraComponent.cpp  RigidBody2D.cpp  Sprite2DRenderer.cpp  SpriteAnimation.cpp  Transform.cpp
src/core/Engine/Scene/Components/Base/: Component.cpp  CoreStructs.cpp
src/core/Engine/Scene/Entity/: Entity.cpp
src/core/Engine/Scene/Manager/: ColliderManager.cpp  ComponentManager.cpp  EntityIDManager.cpp  SignatureManager.cpp
src/core/Engine/SystemManager/: ColliderManager.cpp  InputManager.cpp  LineDebuggerManager.cpp  SceneManager.cpp  SharkApplication.cpp  SharkSystem.cpp  TimeManager.cpp
src/core/Graphic/: VulkanApplication.cpp  VulkanDescriptor.cpp  VulkanDevice.cpp  VulkanDrawable.cpp  VulkanDrawableManager.cpp  VulkanInstance.cpp  VulkanLayer.cpp  VulkanMeshStruct.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  VulkanShader.cpp
src/core/Graphic/DirectX9Core/: DirectXCore.cpp  DirectXTextureManger.cpp  WindowsApplication.cpp
src/core/engine/: VulkanApplication.cpp  VulkanCore.cpp  VulkanDescriptor.cpp  VulkanDevice.cpp  VulkanDrawable.cpp  VulkanEngine.h  VulkanEngine.hpp  VulkanInstance.cpp  VulkanLayer.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  VulkanStructs.cpp  VulkanSwapChain.cpp
src/include/Engine/: ComponentArray.hpp  CoreDefine.h  CoreStructs.h  CoreStructs.hpp  CoreTypes.h  SharkSystem.hpp
src/include/Engine/Audio/: SharkAudio.hpp
src/include/Engine/Manager/: ComponentManager.h  EntityIDManager.h
src/include/Engine/Physics/: Physics.hpp  Physics2D.hpp  RigidBody.hpp  RigidBody2D.hpp
src/include/Engine/Scene/: Scene.h
src/include/Engine/Scene/Components/: BoxCollider.cpp  BoxCollider.hpp  Button.cpp  Button.h  CameraComponent.h  Component.h  RigidBody2D.cpp  RigidBody2D.hpp  Sprite2DRenderer.h  SpriteAnimation.h  Transform.h
src/include/Engine/Scene/Components/Base/: Component.h
src/include/Engine/Scene/Entity/: Entity.h
src/include/Engine/Scene/GameObject/: GameObject.cpp  GameObject.h
src/include/Engine/Scene/Manager/: ColliderManager.hpp  ComponentArray.hpp  ComponentManager.h  EntityIDManager.h  SignatureManager.h
src/include/Engine/SystemManager/: ColliderManager.hpp  DirectXTextureManger.h  InputManager.h  InputManager.hpp  LineDebuggerManager.h  SceneManager.h  SharkApplication.h  SharkSystem.h  TimeManager.h
src/include/Engine/UniformBufferCamera/: Camera.hpp
src/include/Graphic/: IncludeVulkan.h  IncludeVulkan.hpp  SharkVulkan.hpp  SharkVulkanCore.cpp  SharkVulkanDefine.hpp  SharkVulkanDefineStructs.hpp  SharkVulkanDrawable.cpp  SharkVulkanDrawable.hpp  SharkVulkanGetters.cpp  SharkVulkanGraphics.cpp  SharkVulkanUtilFunctions.cpp  VulkanApplication.h  VulkanDescriptor.h  VulkanDevice.h  VulkanDrawable.h  VulkanDrawableManager.h  VulkanGraphicCore.h  VulkanGraphicsCore.cpp  VulkanGraphicsCore.h  VulkanInstance.h  VulkanLayer.h  VulkanMeshStruct.h  VulkanPipeline.h  VulkanRenderer.h  VulkanShader.h  VulkanStructs.h  VulkanSwapChain.h  VulkanTextureManager.cpp  VulkanTextureManager.h
src/include/Graphic/DirectX9Core/: DirectXCore.h  WindowsApplication.h
src/include/Physics/: Physics.hpp
src/shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
src/util/: Assets.cpp  CLogger.cpp
